1. 修复侧边栏排版错误

--- a/html/page1.html
+++ b/html/page1.html
@@ -93,8 +93,8 @@
               <div><a id="link" href="#part0" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent text-purple-700 dark:text-yellow-700">Definition of markdown</a></div>
               <div><a id="link1" href="#part1" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent">Why we need MDX</a></div>
               <div><a id="link2" href="#part2" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent">Benefits of mdx-bundler</a></div>
-              <div><a id="link3" href="#part3" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent">bundleMDX</a></div>
-              <div><a id="link4" href="#part4" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent">getMDXComponent</a></div>
+              <div><a id="link3" href="#part3" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent ml-3">bundleMDX</a></div>
+              <div><a id="link4" href="#part4" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent ml-3">getMDXComponent</a></div>
               <div><a id="link5" href="#part5" class="block mt-3 text-sm hover:text-purple-700 dark:hover:text-yellow-700 focus-visible:outline-accent">Conclusion</a></div>
             </nav>
           </aside>
