1. 侧边栏逻辑完善，有bug（见注释）

--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,7 @@
         <article>
           <header class="mb-2">
             <h3 class="mb-2">
-              <a class="text-3xl font-bold text-purple-700 dark:text-yellow-700 font-display" href="">MDX bundler with Next.JS </a>
+              <a class="text-3xl font-bold untextPurple700 dark:text-yellow-700 font-display" href="">MDX bundler with Next.JS </a>
             </h3>
             <div class="mb-4 text-sm tracking-normal text-fore-subtle">
               <time>2021-08-03</time>
@@ -105,7 +105,7 @@
         <article>
           <header class="mb-2">
             <h3 class="mb-2">
-              <a class="text-3xl font-bold text-purple-700 dark:text-yellow-700 font-display" href="">Error handling in Golang </a>
+              <a class="text-3xl font-bold untextPurple700 dark:text-yellow-700 font-display" href="">Error handling in Golang </a>
             </h3>
             <div class="mb-4 text-sm tracking-normal text-fore-subtle">
               <time>2021-08-01</time>
