1. 使用 theme=dark的方式控制主题 2. 修改 css

--- a/html/index.html
+++ b/html/index.html
@@ -7,23 +7,23 @@
   <script type="text/javascript" src="../javaScript/themes.js"></script>
 </head>
 <body>
-<div id="__next">
-  <div class="page-box dark:bg-gray-700 dark:text-white">
+<div id="main-page">
+  <div class="page-box">
     <div class="page">
       <header class="header">
         <div class="header">
           <h1>
-            <a class="home-link dark:text-white">Praveen Yadav's Blog</a>
+            <a class="home-link">Praveen Yadav's Blog</a>
           </h1>
         </div>
         <button id="themes" onclick="setStylesSheet()">当前白色，点击切换</button>
       </header>
       <main>
-        <h1 class="article-h1-index dark:text-white">Resources to help you <br>make more versatile developer</h1>
+        <h1 class="article-h1-index">Resources to help you <br>make more versatile developer</h1>
         <article>
           <header class="article-header-index">
             <h3 class="article-h3-index">
-              <a class="article-a-index text-purple-700 dark:text-yellow-700" href="">MDX bundler with Next.JS </a>
+              <a class="article-a-index href="">MDX bundler with Next.JS </a>
             </h3>
             <div class="article-meta-index">
               <time>2021-08-03</time>
@@ -38,7 +38,7 @@
         <article>
           <header class="article-header-index">
             <h3 class="article-h3-index">
-              <a class="article-a-index text-purple-700 dark:text-yellow-700" href="">Error handling in Golang </a>
+              <a class="article-a-index href="">Error handling in Golang </a>
             </h3>
             <div class="article-meta-index">
               <time>2021-08-01</time>
