--- a/html/page1.html
+++ b/html/page1.html
@@ -9,13 +9,13 @@
   <script type="text/javascript" src="../javaScript/themes.js"></script>
 </head>
 <body>
-<div id="__next">
-  <div class="page-box dark:bg-gray-700 dark:text-white">
+<div id="main-page">
+  <div class="page-box">
     <div class="page">
       <header class="header">
         <div class="header">
           <h1>
-            <a class="home-link dark:text-white">Praveen Yadav's Blog</a>
+            <a class="home-link">Praveen Yadav's Blog</a>
           </h1>
         </div>
         <button id="themes" onclick="setStylesSheet()">当前白色，点击切换</button>
@@ -35,8 +35,8 @@
                 <span class="font-bold">4 min read</span>
                 <span> • </span>
                 <span class="italic">Last updated: <time>2021-08-03</time></span>
-                <a class="article-meta-a dark:text-yellow-500 hover:text-purple-700 dark:hover:text-yellow-700" href="/tags/markdown">&nbsp; #<!-- -->markdown</a>
-                <a class="article-meta-a dark:text-yellow-500 hover:text-purple-700 dark:hover:text-yellow-700" href="/tags/nextjs">&nbsp; #<!-- -->nextjs</a>
+                <a class="article-meta-a" href="/tags/markdown">&nbsp; #<!-- -->markdown</a>
+                <a class="article-meta-a" href="/tags/nextjs">&nbsp; #<!-- -->nextjs</a>
               </div>
               <div class="article-image">
                 <div class="image-box">
@@ -47,16 +47,16 @@
             </header>
             <div class="prose dark:prose-dark">
               <p>
-                For my personal blog, I have to choose a MDX file in order to display rich content or embed custom react components in markdown. Before going further how to use <strong>MDX with Next.JS</strong>, I would like to explain why I select MDX and <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">mdx-bundler</a> to compile my markdown files.
+                For my personal blog, I have to choose a MDX file in order to display rich content or embed custom react components in markdown. Before going further how to use <strong>MDX with Next.JS</strong>, I would like to explain why I select MDX and <a target="_blank" href="https://www.inktok.com/">mdx-bundler</a> to compile my markdown files.
               </p>
               <p>
-                The source code for this tutorial can be found on <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">GitHub</a>.
+                The source code for this tutorial can be found on <a target="_blank" href="https://www.inktok.com/">GitHub</a>.
               </p>
               <h2 id="definition-of-markdown">
                 Definition of markdown
               </h2>
               <p>
-                As per <strong>John Gruber</strong>, the original creator of <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">Markdown:</a>
+                As per <strong>John Gruber</strong>, the original creator of <a target="_blank" href="https://www.inktok.com/">Markdown:</a>
               </p>
               <blockquote>
                 <p>Markdown is a text-to-HTML conversion tool for web writers. Markdown allows you to write using an easy-to-read, easy-to-write plain text format, then convert it to structurally valid XHTML (or HTML)</p>
@@ -105,11 +105,11 @@ Here's my favorite programming language list:
                 In order to display content in the browser, you need to parse the markdown file and compile it to HTML. On this blog, I am using
               </p>
               <ol>
-                <li><a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">gray-matter</a> to parse my markdown files and</li>
-                <li><a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">mdx-bundler</a> to compile MDX/TSX strings and give you back a component which you can render in the browser.</li>
+                <li><a target="_blank" href="https://www.inktok.com/">gray-matter</a> to parse my markdown files and</li>
+                <li><a target="_blank" href="https://www.inktok.com/">mdx-bundler</a> to compile MDX/TSX strings and give you back a component which you can render in the browser.</li>
               </ol>
               <p>
-                <strong>mdx-bundler</strong> uses <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">esbuild</a>, so it's VERY fast and supports TypeScript files (for the dependencies of your MDX files). It also uses <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">xdm</a> which is a more modern and powerful MDX compiler with no extra runtime requirements
+                <strong>mdx-bundler</strong> uses <a target="_blank" href="https://www.inktok.com/">esbuild</a>, so it's VERY fast and supports TypeScript files (for the dependencies of your MDX files). It also uses <a target="_blank" href="https://www.inktok.com/">xdm</a> which is a more modern and powerful MDX compiler with no extra runtime requirements
               </p>
               <h2 id="benefits-of-mdx-bundler">
                 Benefits of mdx-bundler
@@ -118,21 +118,21 @@ Here's my favorite programming language list:
                 These are popular MDX compiler that are available on the market right now -
               </p>
               <ol>
-                <li>Official MDX support by Next.js <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">Next.js + MDX</a></li>
-                <li>Hashicorp's <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">next-mdx-remote</a></li>
-                <li>Kent C Dodds's <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">mdx-bundler</a></li>
+                <li>Official MDX support by Next.js <a target="_blank" href="https://www.inktok.com/">Next.js + MDX</a></li>
+                <li>Hashicorp's <a target="_blank" href="https://www.inktok.com/">next-mdx-remote</a></li>
+                <li>Kent C Dodds's <a target="_blank" href="https://www.inktok.com/">mdx-bundler</a></li>
               </ol>
               <blockquote>
-                <p>If you have a lot of files that all import and use different components, you may benefit from using mdx-bundler, as <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">next-mdx-remote</a> currently only allows components to be imported and made available across all pages.</p>
+                <p>If you have a lot of files that all import and use different components, you may benefit from using mdx-bundler, as <a target="_blank" href="https://www.inktok.com/">next-mdx-remote</a> currently only allows components to be imported and made available across all pages.</p>
               </blockquote>
               <p>
-                I decided to use <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">mdx-bundler</a> because it has a very <strong>good performance</strong> and <strong>great features</strong> like
+                I decided to use <a target="_blank" href="https://www.inktok.com/">mdx-bundler</a> because it has a very <strong>good performance</strong> and <strong>great features</strong> like
               </p>
               <ol>
                 <li><strong>Components import within a mdx file</strong></li>
                 <li>Frontmatter supports</li>
                 <li>Ability to use frontmatter in mdx file</li>
-                <li>Bundle image within a mdx file using <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">remark-mdx-images</a></li>
+                <li>Bundle image within a mdx file using <a target="_blank" href="https://www.inktok.com/">remark-mdx-images</a></li>
               </ol>
               <p>
                 Now you know why you pick mdx-bundler for your MDX contents, let's see how to use it with Next.JS.
@@ -141,7 +141,7 @@ Here's my favorite programming language list:
                 bundleMDX
               </h3>
               <p>
-                Next.js support two form of <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">pre-rendering: Static Generation</a> and <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">Server-side Rendering.</a> Here, we are using Static Generation to generate HTML files at build time. We will be calling <strong><em>bundleMDX</em></strong> which takes MDX source as string to compile MDX files to HTML.
+                Next.js support two form of <a target="_blank" href="https://www.inktok.com/">pre-rendering: Static Generation</a> and <a target="_blank" href="https://www.inktok.com/">Server-side Rendering.</a> Here, we are using Static Generation to generate HTML files at build time. We will be calling <strong><em>bundleMDX</em></strong> which takes MDX source as string to compile MDX files to HTML.
               </p>
               <p>
 <pre class="language-md">
@@ -219,10 +219,10 @@ Here's my favorite programming language list:
                 Conclusion
               </h2>
               <p>
-                I hope this article will help you to understand how to use MDX with Next.JS using mdx-bundler. You can see a working demo at <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">https://use-mdx-bundler-with-next-js</a> and view the code at <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">GitHub</a>.
+                I hope this article will help you to understand how to use MDX with Next.JS using mdx-bundler. You can see a working demo at <a target="_blank" href="https://www.inktok.com/">https://use-mdx-bundler-with-next-js</a> and view the code at <a target="_blank" href="https://www.inktok.com/">GitHub</a>.
               </p>
               <p>
-                If you have found this useful, please consider recommending and sharing it with other fellow developers and if you have any questions or suggestions, feel free to add a comment or contact me on <a class="hover:text-purple-700 dark:hover:text-yellow-700" target="_blank" href="https://www.inktok.com/">twitter.</a>
+                If you have found this useful, please consider recommending and sharing it with other fellow developers and if you have any questions or suggestions, feel free to add a comment or contact me on <a target="_blank" href="https://www.inktok.com/">twitter.</a>
               </p>
             </div>
             <div class="prose-next">
@@ -230,7 +230,7 @@ Here's my favorite programming language list:
                 <span></span>
                 <div>
                   <h6>Next post</h6>
-                  <div><a class=" dark:text-yellow-500 hover:text-purple-700 dark:hover:text-yellow-700" href="">Error handling in Golang</a></div>
+                  <div><a href="">Error handling in Golang</a></div>
                 </div>
               </nav>
             </div>
