1. 去掉一个无用的class css

--- a/html/page1.html
+++ b/html/page1.html
@@ -45,7 +45,7 @@
                 <img class="image-source" alt="blog header" src="./images/use-mdx-bundler-with-next-js.png">
               </div>
             </header>
-            <div class="prose dark:prose-dark">
+            <div class="prose">
               <p>
                 For my personal blog, I have to choose a MDX file in order to display rich content or embed custom react components in markdown. Before going further how to use <strong>MDX with Next.JS</strong>, I would like to explain why I select MDX and <a target="_blank" href="https://www.inktok.com/">mdx-bundler</a> to compile my markdown files.
               </p>
