1. 主题可以保留 2. 更新变量名称，符合驼峰

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             <a class="home-link">Praveen Yadav's Blog</a>
           </h1>
         </div>
-        <button id="themes" onclick="setStylesSheet()">当前白色，点击切换</button>
+        <button id="themes" onclick="setStylesSheet()">点击切换</button>
       </header>
       <main>
         <h1 class="article-h1-index">Resources to help you <br>make more versatile developer</h1>
