--- a/html/page1.html
+++ b/html/page1.html
@@ -18,12 +18,12 @@
             <a class="home-link">Praveen Yadav's Blog</a>
           </h1>
         </div>
-        <button id="themes" onclick="setStylesSheet()">当前白色，点击切换</button>
+        <button id="themes" onclick="setStylesSheet()">点击切换</button>
       </header>
       <main>
         <div class="main-div">
           <aside class="aside">
-            <nav id="navbanner">
+            <nav id="navBanner">
             </nav>
           </aside>
           <article class="article">
