--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,8 @@
   <title>demo-index</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <script type="text/javascript" src="../javaScript/themes.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
 </head>
 <body>
 <div id="main-page">
@@ -16,7 +18,13 @@
             <a class="home-link">Praveen Yadav's Blog</a>
           </h1>
         </div>
-        <button id="themes" onclick="setStylesSheet()">点击切换</button>
+        <button
+          class="theme-button"
+          onclick="setStylesSheet()"
+        >
+          <div id="themes" class="theme-button-div"></div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        </button>
       </header>
       <main>
         <h1 class="article-h1-index">Resources to help you <br>make more versatile developer</h1>
