--- a/html/page1.html
+++ b/html/page1.html
@@ -43,8 +43,8 @@
                 <span class="font-bold">4 min read</span>
                 <span> • </span>
                 <span class="italic">Last updated: <time>2021-08-03</time></span>
-                <a class="article-meta-a" href="/tags/markdown">&nbsp; #<!-- -->markdown</a>
-                <a class="article-meta-a" href="/tags/nextjs">&nbsp; #<!-- -->nextjs</a>
+                <a class="article-meta-a" href="">&nbsp; #<!-- -->markdown</a>
+                <a class="article-meta-a" href="">&nbsp; #<!-- -->nextjs</a>
               </div>
               <div class="article-image">
                 <div class="image-box">
@@ -253,7 +253,7 @@ Here's my favorite programming language list:
                     <div style="box-sizing:border-box;display:block;max-width:100%">
                       <img class="image-svg" alt="" aria-hidden="true" src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNzAiIGhlaWdodD0iNzAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+">
                     </div>
-                    <img class="image-source" src="./images/profile.png">
+                    <img class="image-source" src="./images/profile.png" alt="">
                   </div>
                 </div>
                 <p>
@@ -262,7 +262,7 @@ Here's my favorite programming language list:
                   <br>
                   Follow on
                   <a href="https://www.inktok.com/"> twitter</a>,
-                  <ahref="https://www.inktok.com/"> github</a>
+                  <a href="https://www.inktok.com/"> github</a>
                 </p>
               </div>
             </footer>
