--- a/html/page1.html
+++ b/html/page1.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh" id="html" class="light">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <title>MDX bundler with Next.JS</title>
+  <script>
+  // Render blocking JS:
+  if (localStorage.themes) {
+    document.documentElement.setAttribute('themes', localStorage.themes);
+  } else {
+    document.documentElement.setAttribute('themes', 'light');
+    localStorage.themes = "light";
+  }
+  </script>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/style.css" rel="stylesheet"/>
   <script type="text/javascript" src="../javaScript/nav.js"></script>
