1. 修复主题按钮大小

--- a/html/index.html
+++ b/html/index.html
@@ -28,10 +28,10 @@
           </h1>
         </div>
         <button
-          class="theme-button"
+          class="theme-button-index"
           onclick="setStylesSheet()"
         >
-          <div id="themes" class="theme-button-div"></div>
+          <div id="themes" class="theme-button-div-index"></div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         </button>
       </header>
