--- a/html/page1.html
+++ b/html/page1.html
@@ -30,10 +30,10 @@
           </h1>
         </div>
         <button
-          class="theme-button"
+          class="theme-button-page"
           onclick="setStylesSheet()"
         >
-          <div id="themes" class="theme-button-div"></div>
+          <div id="themes" class="theme-button-div-page"></div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.13/lottie.min.js" integrity="sha512-srGxQe2w7s50+5/nNgEVKYtBm15zRylJwdjxYnGEZr3mmHFJKFjA/ImA2OKizVzoIDX8XISMHDI1+az9pnumbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         </button>
       </header>
