1. 增加搜索按钮 2. 增加搜索页面结果，（这个 iPhone 5/SE有 适配有轻微遮挡，感觉先这样）

--- a/html/search.html
+++ b/html/search.html
@@ -54,7 +54,13 @@
 
       </header>
       <main>
-        <h1 class="article-h1-index">Resources to help you <br>make more versatile developer</h1>
+        <input
+          type="search"
+          value="MDX"
+          placeholder="MDX"
+          class="search-input-none-h1"
+          onkeyup="enterSearch()"
+        >
         <article>
           <header class="article-header-index">
             <h3 class="article-h3-index">
