--- a/html/page1.html
+++ b/html/page1.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/style.css" rel="stylesheet"/>
   <script type="text/javascript" src="../javaScript/nav.js"></script>
+  <script type="text/javascript" src="../javaScript/snippet.js"></script>
+  <script type="text/javascript" src="../javaScript/clipboard.min.js"></script>
   <script type="text/javascript" src="../javaScript/themes.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
@@ -72,6 +74,41 @@
               <h2 id="definition-of-markdown">
                 Definition of markdown
               </h2>
+              <table>
+                <thead>
+                <tr>
+                <th></th>
+                <th>HTTP</th>
+                <th>HTTPS</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr>
+                <td>安全性</td>
+                <td>明文传输，安全性差</td>
+                <td>加密传输，安全性较好</td>
+                </tr>
+
+                <tr>
+                <td>是否需要申请</td>
+                <td>不需要申请，免费</td>
+                <td>需要到 CA（数据证书认证机构）申请，需要一定费用</td>
+                </tr>
+
+                <tr>
+                <td>页面响应速度</td>
+                <td>较快</td>
+                <td>较慢</td>
+                </tr>
+
+                <tr>
+                <td>默认端口</td>
+                <td>80</td>
+                <td>443</td>
+                </tr>
+                </tbody>
+              </table>
               <p>
                 As per <strong>John Gruber</strong>, the original creator of <a target="_blank" href="https://www.inktok.com/">Markdown:</a>
               </p>
